fixed wrong background link

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
 
   --breakpoint-xs: 480px;
 
-  --background-image-hero-pattern: url("/hero-bg.png");
+  --background-image-hero-pattern: url("/BG.png");
 }
 
 @layer base {
